@@ -31,7 +31,6 @@
   end_markup_phrase = (" " | PUNCT | EOF | LF) @{ fhold; };
   code = "["? "@" >X mtext >A %T :> "@" "]"? ;
   script_tag = ( "<script" [^>]* ">" (default+ -- "</script>") "</script>" LF? ) >X >A %T ;
-  notextile = "<notextile>" >X (default+ -- "</notextile>") >A %T "</notextile>";
   strong = "["? "*" >X mtext >A %T :> "*" "]"? ;
   b = "["? "**" >X mtext >A %T :> "**" "]"? ;
   em = "["? "_" >X mtext >A %T :> "_" "]"? ;
