@@ -8,8 +8,7 @@
   machine redcloth_scan;
 
   # blocks
-  notextile_tag_start = "<notextile>" ;
-  notextile_tag_end = "</notextile>" LF? ;
+  notextile_tag = notextile (LF | EOF) ;
   noparagraph_line_start = " "+ ;
   notextile_block_start = ( "notextile" >A %{ STORE("type"); } A C :> "." ( "." %extend | "" ) " "+ ) ;
   pre_tag_start = "<pre" [^>]* ">" (space* code_tag_start)? ;
@@ -107,11 +106,6 @@
 
   noparagraph_line := |*
     LF  { ADD_BLOCK(); fgoto main; };
-    default => cat;
-  *|;
-
-  notextile_tag := |*
-    notextile_tag_end   { ADD_BLOCK(); fgoto main; };
     default => cat;
   *|;
   
@@ -293,7 +287,7 @@
 
   main := |*
     noparagraph_line_start  { ASET("type", "ignored_line"); fgoto noparagraph_line; };
-    notextile_tag_start { ASET("type", "notextile"); fgoto notextile_tag; };
+    notextile_tag   { INLINE(block, "notextile"); };
     notextile_block_start { ASET("type", "notextile"); fgoto notextile_block; };
     script_tag_start { CAT(block); fgoto script_tag; };
     pre_tag_start       { ASET("type", "notextile"); CAT(block); fgoto pre_tag; };
