@@ -1,5 +1,7 @@
 === Edge
 
+* Fix inline <notextile> being recognized as block <notextile>. #81
+
 * Allow leading spaces on lists for backward compatibility with RedCloth 3.x. #89
 
 * Recognize deleted phrases when they start at the beginning of a line. #83
